testData/imports/optimize/unusedImplicitImports.go
package main

import . "fmt"
import <error descr="Unused import">. "math"</error>

func main() {
    Printf("asd")
}